--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 
     <!-- Font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 
     <!-- Font google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,22 +19,23 @@
         rel="stylesheet">
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="../css/main.min.css">
+    <link rel="stylesheet" href="../../css/main.min.css">
     <style>
         #spinner {
-          height: 100vh;
-          width: 100vw;
-          background: #e5e5e5;
-          position: fixed;
-          left: 0;
-          top: 0;
-          z-index: 10;
-          display: none;
-          /* coolors */
+            height: 100vh;
+            width: 100vw;
+            background: #e5e5e5;
+            position: fixed;
+            left: 0;
+            top: 0;
+            z-index: 10;
+            display: none;
+            /* coolors */
         }
-      </style>
+    </style>
     <title>CyberPhone - Admin</title>
 </head>
+
 <body>
     <div id="spinner"></div>
     <header class="admin_header">
@@ -50,7 +52,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav nav_left">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">
+                            <a class="nav-link active" aria-current="page" href="../../index.html">
                                 <div><i class="fa fa-home"></i></div>
                                 Home
                             </a>
@@ -74,12 +76,13 @@
             </div>
         </nav>
     </header>
-    
+
     <section class="phone_mgmt">
         <div class="container">
             <div class="phone_header">
                 <h3>Phone Management</h3>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                    data-bs-whatever="@mdo">
                     <i class="fa fa-plus-circle"></i>
                     Add Phone
                 </button>
@@ -115,73 +118,80 @@
     </section>
 
     <!-- Modal -->
-    <div class="modalPhone modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modalPhone modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title" id="exampleModalLabel">Phone Management</h1>
                 </div>
                 <div class="modal-body">
-                    <form role="form">                    
+                    <form role="form">
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-mobile-alt"></i></span>
                                 </div>
-                                <input type="text" name="name" id="name" class="form-control input-sm" placeholder="Phone Name" >
+                                <input type="text" name="name" id="name" class="form-control input-sm"
+                                    placeholder="Phone Name">
                             </div>
-                    
+
                             <span class="sp-thongbao" id="tbTKNV"></span>
                         </div>
-                    
+
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-dollar-sign"></i></span>
                                 </div>
-                                <input type="number" name="price" id="price" class="form-control input-sm" placeholder="Price">
+                                <input type="number" name="price" id="price" class="form-control input-sm"
+                                    placeholder="Price">
                             </div>
                             <span class="sp-thongbao" id="tbTen"></span>
                         </div>
-                    
+
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-mobile"></i></span>
                                 </div>
-                                <input type="text" name="screen" id="screen" class="form-control input-sm" placeholder="Screen">
+                                <input type="text" name="screen" id="screen" class="form-control input-sm"
+                                    placeholder="Screen">
                             </div>
-                    
+
                             <span class="sp-thongbao" id="tbEmail"></span>
                         </div>
-                    
+
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-camera"></i></span>
                                 </div>
-                                <input type="text" name="backCam" id="backCam" class="form-control input-sm" placeholder="Back Camera">
+                                <input type="text" name="backCam" id="backCam" class="form-control input-sm"
+                                    placeholder="Back Camera">
                             </div>
                             <span class="sp-thongbao" id="tbMatKhau"></span>
                         </div>
-                    
+
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-camera"></i></span>
                                 </div>
-                                <input type="text" name="frontCam" id="frontCam" class="form-control" placeholder="Front Camera">
+                                <input type="text" name="frontCam" id="frontCam" class="form-control"
+                                    placeholder="Front Camera">
                             </div>
-                    
+
                             <span class="sp-thongbao" id="tbNgay"></span>
                         </div>
-                    
+
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-link"></i></span>
                                 </div>
-                                <input type="text" name="link" id="link" class="form-control input-sm" placeholder="Image link">
+                                <input type="text" name="link" id="link" class="form-control input-sm"
+                                    placeholder="Image link">
                             </div>
                             <span class="sp-thongbao" id="tbLuongCB"></span>
                         </div>
@@ -191,7 +201,8 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-comment"></i></span>
                                 </div>
-                                <input type="text" name="desc" id="desc" class="form-control input-sm" placeholder="Description">
+                                <input type="text" name="desc" id="desc" class="form-control input-sm"
+                                    placeholder="Description">
                             </div>
                             <span class="sp-thongbao" id="tbGiolam"></span>
                         </div>
@@ -207,16 +218,17 @@
                                     <option>Samsung</option>
                                 </select>
                             </div>
-                    
+
                             <span class="sp-thongbao" id="tbChucVu"></span>
                         </div>
 
-                        
-                    
+
+
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" onclick="createProduct()" onclick="validate()" class="btn btn-warning" data-bs-dismiss="modal">Add Phone</button>
+                    <button type="button" onclick="createProduct()" onclick="validate()" class="btn btn-warning"
+                        data-bs-dismiss="modal">Add Phone</button>
                     <button type="button" class="btn btn-dark" aria-label="Close" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -243,25 +255,42 @@
                             <i class="fa fa-robot"></i>
                             CYBER PHONE
                         </h5>
-                        <p>We pride ourselves on our efficiency and hard work, but most of all our ability to source you the
+                        <p>We pride ourselves on our efficiency and hard work, but most of all our ability to source you
+                            the
                             best quality and best value products and devices in the market.</p>
                     </div>
                     <div class="col-3 footer_item">
                         <h5>BRANDS</h5>
                         <ul>
-                            <a><li>iPhone</li></a>
-                            <a><li>Samsung</li></a>
-                            <a><li>Xiaomi</li></a>
-                            <a><li>Oppo</li></a>
+                            <a>
+                                <li>iPhone</li>
+                            </a>
+                            <a>
+                                <li>Samsung</li>
+                            </a>
+                            <a>
+                                <li>Xiaomi</li>
+                            </a>
+                            <a>
+                                <li>Oppo</li>
+                            </a>
                         </ul>
                     </div>
                     <div class="col-3 footer_item">
                         <h5>USEFUL LINKS</h5>
                         <ul>
-                            <a><li>Pricing</li></a>
-                            <a><li>Settings</li></a>
-                            <a><li>Orders</li></a>
-                            <a><li>Help</li></a>
+                            <a>
+                                <li>Pricing</li>
+                            </a>
+                            <a>
+                                <li>Settings</li>
+                            </a>
+                            <a>
+                                <li>Orders</li>
+                            </a>
+                            <a>
+                                <li>Help</li>
+                            </a>
                         </ul>
                     </div>
                     <div class="col-3 footer_item">
@@ -290,21 +319,22 @@
                     <a href="#">Cyber Phone</a>
                 </p>
             </div>
-        
+
         </div>
     </footer>
-    <!-- axios -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
-      integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
+
     <!-- Bootstrap JS v5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- mycontroller -->
-    <script src="./adminJS/controller.js"></script>
-    <!-- my JS -->
-    <script src="../JS/main.js"></script>
+
+    <!-- axios -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
+        integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- my controller -->
+    <script src="../controllers/controller.js"></script>
+    <!-- my admin JS -->
+    <script src="../admin.js"></script>
 </body>
+
 </html>
