--- a/css/main.css
+++ b/css/main.css
@@ -217,3 +217,6 @@ section.phone_mgmt .phone_table .table thead, section.phone_mgmt .phone_table .t
   color: #313131;
   font-weight: bolder;
 }
+section.phone_mgmt .phone_table .table thead tr th:nth-child(6) {
+  width: 170px;
+}
