--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -58,7 +58,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="../../customer/view/customer.html">
                                 <div><i class="fa fa-store"></i></div>
                                 Store
                             </a>
