--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -126,7 +126,7 @@
                     <h1 class="modal-title" id="exampleModalLabel">Phone Management</h1>
                 </div>
                 <div class="modal-body">
-                    <form role="form">
+                    <form role="form" id="myForm">
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend">
@@ -136,7 +136,7 @@
                                     placeholder="Phone Name">
                             </div>
 
-                            <span class="sp-thongbao" id="tbTKNV"></span>
+                            <span class="sp-thongbao" id="tbName"></span>
                         </div>
 
                         <div class="form-group">
@@ -147,7 +147,7 @@
                                 <input type="number" name="price" id="price" class="form-control input-sm"
                                     placeholder="Price">
                             </div>
-                            <span class="sp-thongbao" id="tbTen"></span>
+                            <span class="sp-thongbao" id="tbPrice"></span>
                         </div>
 
                         <div class="form-group">
@@ -159,7 +159,7 @@
                                     placeholder="Screen">
                             </div>
 
-                            <span class="sp-thongbao" id="tbEmail"></span>
+                            <span class="sp-thongbao" id="tbScreen"></span>
                         </div>
 
                         <div class="form-group">
@@ -170,7 +170,7 @@
                                 <input type="text" name="backCam" id="backCam" class="form-control input-sm"
                                     placeholder="Back Camera">
                             </div>
-                            <span class="sp-thongbao" id="tbMatKhau"></span>
+                            <span class="sp-thongbao" id="tbBackCam"></span>
                         </div>
 
                         <div class="form-group">
@@ -182,7 +182,7 @@
                                     placeholder="Front Camera">
                             </div>
 
-                            <span class="sp-thongbao" id="tbNgay"></span>
+                            <span class="sp-thongbao" id="tbFrontCam"></span>
                         </div>
 
                         <div class="form-group">
@@ -193,7 +193,7 @@
                                 <input type="text" name="link" id="link" class="form-control input-sm"
                                     placeholder="Image link">
                             </div>
-                            <span class="sp-thongbao" id="tbLuongCB"></span>
+                            <span class="sp-thongbao" id="tbLink"></span>
                         </div>
 
                         <div class="form-group">
@@ -204,11 +204,11 @@
                                 <input type="text" name="desc" id="desc" class="form-control input-sm"
                                     placeholder="Description">
                             </div>
-                            <span class="sp-thongbao" id="tbGiolam"></span>
+                            <span class="sp-thongbao" id="tbDesc"></span>
                         </div>
 
                         <div class="form-group">
-                            ~<div class="input-group">
+                            <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-signature"></i></span>
                                 </div>
@@ -219,16 +219,15 @@
                                 </select>
                             </div>
 
-                            <span class="sp-thongbao" id="tbChucVu"></span>
+                            <span class="sp-thongbao" id="tbBrand"></span>
                         </div>
-
-
 
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" onclick="createProduct()" onclick="validate()" class="btn btn-warning"
                         data-bs-dismiss="modal">Add Phone</button>
+                    <button type="button" class="btn btn-primary" onclick="updatePhone()">Update</button>
                     <button type="button" class="btn btn-dark" aria-label="Close" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
