--- a/scss/Pages/_admin.scss
+++ b/scss/Pages/_admin.scss
@@ -35,6 +35,12 @@ section.phone_mgmt {
                     }
                 }
             }
+
+            #tblDanhSachSP {
+                tr, td {
+                    font-weight: lighter;
+                }
+            }
         }
     }
 }
