--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -332,6 +332,8 @@
 
     <!-- my controller -->
     <script src="../controllers/controller.js"></script>
+    <!-- my validation -->
+    <script src="../controllers/validation.js"></script>
     <!-- my admin JS -->
     <script src="../admin.js"></script>
 </body>
