--- a/scss/Pages/_admin.scss
+++ b/scss/Pages/_admin.scss
@@ -9,6 +9,24 @@ section.phone_mgmt {
         color: $white-3;
         border-radius: $num-20 $num-20 0 0;
 
+        .btn_groups {
+            display: flex;
+            align-items: center;
+
+            .filter {
+                margin-right: $num-15;
+
+                .dropdown-menu {
+                    .dropdown-item {
+                        &:active {
+                            background-color: $blue-3;
+                            color: $white-3;
+                        }
+                    }
+                }
+            }
+        }
+
         button {
             background-color: $blue-3;
             border: 1px solid $blue-3;
