added validation for form

--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -233,8 +233,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" onclick="createProduct()" onclick="validate()" class="btn btn-warning"
-                        data-bs-dismiss="modal">Add Phone</button>
+                    <button type="button" onclick="createProduct()" onclick="validate()" class="btn btn-warning">Add Phone</button>
                     <button type="button" class="btn btn-primary" onclick="updateProduct()">Update</button>
                     <button type="button" class="btn btn-dark" aria-label="Close" data-bs-dismiss="modal">Close</button>
                 </div>
