--- a/css/main.css
+++ b/css/main.css
@@ -15,47 +15,21 @@ header.admin_header .navbar .container .navbar-brand {
 header.admin_header .navbar .container .navbar-brand i {
   margin-right: 5px;
 }
+header.admin_header .navbar .container .navbar-toggler {
+  background: #fff;
+}
 header.admin_header .navbar .container .navbar-collapse {
-  display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
-header.admin_header .navbar .container .navbar-collapse .nav_left {
+header.admin_header .navbar .container .navbar-collapse .navbar-nav .nav-link {
+  text-align: center;
+  color: #fff;
   margin-left: 20px;
-}
-header.admin_header .navbar .container .navbar-collapse .nav_left .nav-item {
-  margin-right: 30px;
   transform: scale(1);
-}
-header.admin_header .navbar .container .navbar-collapse .nav_left .nav-item .nav-link {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
   transition: 0.3s ease-in-out;
 }
-header.admin_header .navbar .container .navbar-collapse .nav_left .nav-item .nav-link i {
-  font-size: 25px;
-}
-header.admin_header .navbar .container .navbar-collapse .nav_left .nav-item:hover .nav-link:hover {
-  transform: scale(1.2);
-}
-header.admin_header .navbar .container .navbar-collapse .nav_right .nav-item {
-  transform: scale(1);
-}
-header.admin_header .navbar .container .navbar-collapse .nav_right .nav-item .nav-link {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  transition: 0.3s ease-in-out;
-}
-header.admin_header .navbar .container .navbar-collapse .nav_right .nav-item .nav-link i {
-  font-size: 25px;
-}
-header.admin_header .navbar .container .navbar-collapse .nav_right .nav-item:hover .nav-link:hover {
-  transform: scale(1.2);
+header.admin_header .navbar .container .navbar-collapse .navbar-nav .nav-link:hover {
+  transform: scale(1.3);
 }
 
 footer.admin_footer {
